// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App successfully proceeds through user flow logging in and out 1`] = `
<div>
  <nav
    class="mb-4 navbar navbar-expand navbar-dark bg-primary fixed-top"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        Socializer
      </a>
      <div
        class="navbar-nav"
      >
        <a
          class="nav-link"
          href="/"
          role="button"
        >
          Feed
        </a>
        <a
          class="nav-link"
          href="/chat"
          role="button"
        >
          Chat
        </a>
      </div>
      <button
        aria-label="Toggle navigation"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="justify-content-end navbar-collapse collapse"
      >
        <div
          class="navbar-nav"
        >
          <div
            class="dropdown nav-item"
          >
            <a
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle nav-link"
              href="#"
              role="button"
            >
              John Doe
            </a>
            <div
              aria-labelledby=""
              class="dropdown-menu"
            >
              <a
                class="dropdown-item"
                href="#"
                role="button"
              >
                Log out
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="d-none d-md-block col-md-4"
      >
        <div
          class="chat-bar sticky-top d-flex flex-column pb-4"
        >
          <h4
            class="d-flex justify-content-between align-items-center"
          >
            <span>
              Chat
            </span>
            <button
              class="btn btn-primary btn-sm"
              type="button"
            >
              New chat
            </button>
          </h4>
          <div
            class="chat-conversations d-flex flex-column"
          >
            <a
              class="d-flex align-items-center p-2 chat"
              href="/chat/1"
            >
              <div
                class="d-flex chat-avatars"
              >
                <div
                  class="chat-avatar-wrapper"
                >
                  <img
                    alt="Gravatar for undefined"
                    class="react-gravatar rounded-circle"
                    height="30"
                    src="//www.gravatar.com/avatar/abc?d=retro&r=g&s=30"
                    srcset="//www.gravatar.com/avatar/abc?d=retro&r=g&s=60 2x"
                    width="30"
                  />
                </div>
                <div
                  class="chat-avatar-wrapper"
                >
                  <img
                    alt="Gravatar for undefined"
                    class="react-gravatar rounded-circle"
                    height="30"
                    src="//www.gravatar.com/avatar/def?d=retro&r=g&s=30"
                    srcset="//www.gravatar.com/avatar/def?d=retro&r=g&s=60 2x"
                    width="30"
                  />
                </div>
              </div>
              <div
                class="chat-title"
              >
                Jane Smith, John Doe
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        class="col-md-8 col-12"
      >
        <h4>
          Feed
        </h4>
        <div
          class="mb-4 card"
        >
          <div
            class="card-body"
          >
            <form
              class=""
            >
              <div
                class="form-group"
              >
                <textarea
                  class="form-control"
                  placeholder="What's on your mind?"
                  rows="3"
                />
              </div>
              <button
                class="btn btn-primary"
                type="submit"
              >
                Submit
              </button>
            </form>
          </div>
        </div>
        <div
          class="mb-4 card"
        >
          <div
            class="d-flex justify-content-between align-items-center card-header"
          >
            <div
              class="d-flex align-items-center"
            >
              <img
                alt="Gravatar for undefined"
                class="react-gravatar rounded-circle"
                height="30"
                src="//www.gravatar.com/avatar/abc?d=retro&r=g&s=30"
                srcset="//www.gravatar.com/avatar/abc?d=retro&r=g&s=60 2x"
                width="30"
              />
              <div
                class="ml-2"
              >
                <div
                  class="h6 mb-0"
                >
                  John Smith
                </div>
              </div>
            </div>
            <div
              class="text-muted h7"
            >
              <time
                datetime="2019-04-18T00:00:00.000Z"
                title="2019-04-18T00:00:00Z"
              >
                2 days ago
              </time>
            </div>
          </div>
          <div
            class="card-body"
          >
            <p
              class="card-text"
            >
              Thoughts
            </p>
          </div>
          <div
            class="d-flex card-footer"
          >
            <a
              class="ml-auto"
              href="/posts/1"
            >
              Discussion ≫
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App successfully proceeds through user flow logging in and out 2`] = `
<div>
  <nav
    class="mb-4 navbar navbar-expand navbar-dark bg-primary fixed-top"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        Socializer
      </a>
      <button
        aria-label="Toggle navigation"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="justify-content-end navbar-collapse collapse"
      >
        <div
          class="navbar-nav"
        >
          <a
            class="nav-link"
            href="/login"
            role="button"
          >
            Log in
          </a>
          <a
            class="nav-link"
            href="/signup"
            role="button"
          >
            Sign up
          </a>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="d-none d-md-block col-md-4"
      >
        <div
          class="p-2 empty-state"
        >
          <h4>
            Chat
          </h4>
          <p>
            <a
              href="/login"
            >
              Log in
            </a>
             to chat
          </p>
        </div>
      </div>
      <div
        class="col-md-8 col-12"
      >
        <h4>
          Feed
        </h4>
        <div
          class="mb-4 card"
        >
          <div
            class="card-body"
          >
            <div
              class="text-muted h7"
            >
              <a
                href="/login"
              >
                Log in
              </a>
               to submit a 
              post
              .
            </div>
          </div>
        </div>
        <div
          class="mb-4 card"
        >
          <div
            class="d-flex justify-content-between align-items-center card-header"
          >
            <div
              class="d-flex align-items-center"
            >
              <img
                alt="Gravatar for undefined"
                class="react-gravatar rounded-circle"
                height="30"
                src="//www.gravatar.com/avatar/abc?d=retro&r=g&s=30"
                srcset="//www.gravatar.com/avatar/abc?d=retro&r=g&s=60 2x"
                width="30"
              />
              <div
                class="ml-2"
              >
                <div
                  class="h6 mb-0"
                >
                  John Smith
                </div>
              </div>
            </div>
            <div
              class="text-muted h7"
            >
              <time
                datetime="2019-04-18T00:00:00.000Z"
                title="2019-04-18T00:00:00Z"
              >
                2 days ago
              </time>
            </div>
          </div>
          <div
            class="card-body"
          >
            <p
              class="card-text"
            >
              Thoughts
            </p>
          </div>
          <div
            class="d-flex card-footer"
          >
            <a
              class="ml-auto"
              href="/posts/1"
            >
              Discussion ≫
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
